--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-ts": "node build.js",
+    "build": "yarn run clean && yarn run build-ts",
+    "deploy-contract": "node --loader tsx src/contracts/tools/deploy-contract.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@types/node": "18.15.11",
@@ -22,6 +25,24 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
-  }
+    "typescript": "5.0.4",
+    "warp-contracts": "^1.2.2",
+    "warp-contracts-plugin-deploy": "^1.0.3",
+    "warp-contracts-plugin-ethers": "^1.0.7",
+    "arweave-wallet-connector-node": "^0.0.3",
+    "arlocal": "^1.1.60"
+  },
+  "devDependencies": {
+    "@types/babel__generator": "^7.6.4",
+    "@types/jest": "^29.5.0",
+    "@types/jsdom": "^21.1.1",
+    "fetch-blob": "^3.2.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jsdom": "^21.1.1",
+    "ts-jest": "^29.1.0",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^3.12.6"
+  },
+  "type": "module"
 }
