--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "start": "next start",
     "lint": "next lint",
     "build-ts": "node build.js",
-    "build": "yarn run clean && yarn run build-ts",
+    "build": "npm run build-ts",
     "deploy-contract": "node --loader tsx src/contracts/tools/deploy-contract.ts",
-    "test": "jest"
+    "test": "npm run build && jest"
   },
   "dependencies": {
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "arlocal": "^1.1.60",
     "arweave": "^1.13.5",
+    "arweave-wallet-connector-node": "^0.0.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -24,13 +26,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "replace-in-file": "^6.3.5",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "warp-contracts": "^1.2.2",
     "warp-contracts-plugin-deploy": "^1.0.3",
-    "warp-contracts-plugin-ethers": "^1.0.7",
-    "arweave-wallet-connector-node": "^0.0.3",
-    "arlocal": "^1.1.60"
+    "warp-contracts-plugin-ethers": "^1.0.7"
   },
   "devDependencies": {
     "@types/babel__generator": "^7.6.4",
